# napari-sperm-measure

./: .gitignore  LICENSE  README.md  plugin.py  requirements.txt  setup.cfg
src/napari_sperm_measure/: __init__.py  data_handling.py  measurement.py  utils.py  widget.py
src/napari_sperm_measure.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_data/sperm/: manual.xlsx
