[metadata]
name = napari-sperm-measure
version = 0.0.1
description = A napari plugin for measuring sperm cell lengths in microscopy images
long_description = file: README.md
long_description_content_type = text/markdown
author = Xinhang Ma
author_email = m.owen@wustl.edu
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
python_requires = >=3.8
package_dir =
    =src
install_requires =
    numpy
    napari>=0.4.14
    magicgui>=0.3.0
    opencv-python
    scikit-image
    scipy
    
[options.packages.find]
where = src

[options.entry_points]
napari.plugin =
    napari-sperm-measure = napari_sperm_measure